<?xml version="1.0"?>
<package format="3">
  <name>anatolian_rover_msgs</name>
  <version>0.1.0</version>
  <description>Custom messages for the Anatolian Rover minimal GPS-based autonomous system.</description>
  <maintainer email="roverearendil@gmail.com">earendilrover</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
