<?xml version="1.0"?>
<package format="3">
  <name>anatolian_rover_mvp</name>
  <version>0.1.0</version>
  <description>Minimal GPS-based autonomous rover nodes for Anatolian Rover simulation and real deployment.</description>
  <maintainer email="roverearendil@gmail.com">earendilrover</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>anatolian_rover_msgs</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
